compiler-cli/src/integration/snapshots/gleam__integration__echo__echo_function.snap
---
source: compiler-cli/src/integration/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo fn(n) { n + 1 }
  echo private
}

fn private() {
  1
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
//fn(a) { ... }
[90msrc/main.gleam:3[39m
//fn() { ... }
