compiler-cli/src/integration/snapshots/gleam__integration__echo__echo_importing_module_named_inspect.snap
---
source: compiler-cli/src/integration/echo.rs
expression: output
---
--- main.gleam ----------------------
import inspect

pub fn main() {
  echo inspect.x
}


--- gleam run output ----------------
[90msrc/main.gleam:4[39m
Nil
