compiler-cli/src/integration/snapshots/gleam__integration__echo__echo_nil.snap
---
source: compiler-cli/src/integration/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo Nil
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
Nil
