compiler-cli/src/integration/snapshots/gleam__integration__echo__echo_tuple.snap
---
source: compiler-cli/src/integration/echo.rs
expression: output
---
--- main.gleam ----------------------
pub fn main() {
  echo #()
  echo #(True, 1, "hello")
}


--- gleam run output ----------------
[90msrc/main.gleam:2[39m
#()
[90msrc/main.gleam:3[39m
#(True, 1, "hello")
